# marshitronica

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  beep.py  melody_test.scd  saw_test.scd  setup.py  start.scd  test.py
examples/: loop_for_sf.scd  over_the_rainbow.py  over_the_rainbow_cpplib.py  sound_font_test.py
marshitronica/: __init__.py  phrase.py  scheduler.py  track.py
marshitronica/scd/: output.scd  pitchShift.scd
marshitronica/scsyndef/: output.scsyndef  pitchShift.scsyndef  smooth.scsyndef
scd/: output.scd  pitchShift.scd  smooth.scd
src/: common.cpp  common.h  event.cpp  event.h  main.cpp  note.cpp  note.h  notes_phrase.cpp  notes_phrase.h  phrase.cpp  phrase.h  scheduler.cpp  scheduler.h  sound_font.cpp  sound_font.h  track.cpp  track.h  tsf.h
tests/non_auto/: test_scheduler.py
tests/unittest/: test_common.py  test_note.py  test_phrase.py  test_scheduler.py
